Fix weird scroll situation in Import CSV page
The body wasn't 100vw, so the scrollbar showed somewhere in the middle of the page. I moved the size constraint to a <div class="csv-page">.

--- a/ts/import-csv/import-csv-base.scss
+++ b/ts/import-csv/import-csv-base.scss
@@ -15,7 +15,6 @@
 
 body {
     height: 100vh;
-    width: min(100vw, 70em);
-    margin: 0 auto;
+    width: 100vw;
     padding: 0 1em 1em 1em;
 }
